--- a/src/_components/_layout/_layout.pug
+++ b/src/_components/_layout/_layout.pug
@@ -33,8 +33,9 @@ html(lang="en")
 		//- #go-top
 		//- 	<svg xmlns="http://www.w3.org/2000/svg" width="31.279" height="40.032" viewBox="0 0 31.279 40.032"><g transform="translate(28.454 38.032) rotate(180)"><g transform="translate(0 0)"><line y2="34.32" transform="translate(12.742)" fill="none" stroke="#d51635" stroke-linecap="round" stroke-width="4"/><path d="M0,0,12.542,11.415,25.632,0" transform="translate(0 23.938)" fill="none" stroke="#d51635" stroke-linecap="round" stroke-width="4"/></g><g transform="translate(0 23.938)"><path d="M0,0,12.542,11.415,25.632,0" fill="none" stroke="#d51635" stroke-linecap="round" stroke-width="4"/></g></g></svg>
 		//- include scripts
-		//- script(type="text/javascript", src="https://maps.googleapis.com/maps/api/js?&libraries=places&key=AIzaSyAq6ag0zUMblc-Wk5Z5S8KWkHpT3ak1LzI")
+		script(type="text/javascript", src="https://maps.googleapis.com/maps/api/js?&libraries=places&key=AIzaSyAq6ag0zUMblc-Wk5Z5S8KWkHpT3ak1LzI")
 		//- script(type="text/javascript", src='https://connect.facebook.net/vi_VN/sdk.js#xfbml=1&version=v3.3')
 		script(type="text/javascript", src="./js/core.min.js")
 		script(type="text/javascript", src="./js/main.min.js")
+		script(type="text/javascript", src="./js/cookie.min.js")
 		block scripts
