--- a/src/_components/_layout/_layout.pug
+++ b/src/_components/_layout/_layout.pug
@@ -12,11 +12,10 @@ html(lang="en")
 		link(rel="stylesheet", href="./css/core.min.css")
 		link(rel="stylesheet", href="./css/main.min.css")
 	body
-		#fb-root
 		#loading
 			.logo-loader
 				img(src="./assets/loading.gif")
-			.progstat-wrapper.d-none Loading:
+			.progstat-wrapper Loading:
 				span#progstat 0
 				| %
 			#progress
