--- a/src/scss/globals/loading.scss
+++ b/src/scss/globals/loading.scss
@@ -10,14 +10,6 @@
 	width: 100%;
 	height: 100%;
 
-	#progress {
-		display: none;
-		transition: 1s;
-		background: #000;
-		width: 0;
-		height: 1px
-	}
-
 	#progress,
 	.progstat-wrapper {
 		position: absolute;
@@ -25,8 +17,15 @@
 		transform: translateY(-50%)
 	}
 
+	#progress {
+		transition: 1s;
+		background: #000;
+		width: 0;
+		height: 1px
+	}
+
 	.progstat-wrapper {
-		margin-top: 0;
+		margin-top: 70px;
 		width: 100%;
 		color: #000;
 		font-size: 14px;
