--- a/src/scss/globals/utilities.scss
+++ b/src/scss/globals/utilities.scss
@@ -1,44 +1,65 @@
-[hidden],
-.d-none,
-.hidden {
-	display: none !important;
-}
-
-.ofcv {
-	width: 100%;
-	height: 100%;
-	object-fit: cover;
-	object-position: center;
-	font-family: 'object-fit: cover, object-position: center';
-	background-size: cover;
-}
-
-.ofct {
-	width: 100%;
-	height: 100%;
-	object-fit: contain;
-	object-position: center;
-	font-family: 'object-fit: contain, object-position: center';
-	background-size: contain;
-}
-
-.dekstop {
-	@media (max-width: 1024px) {
-		display: none;
-	}
-}
-
-.mobile {
-	@media (min-width: 1025px) {
-		display: none;
-	}
-}
-
 .blur-up {
-	filter: blur(10px);
+	filter    : blur(10px);
 	transition: filter 1s;
 
 	&.lazy-loaded {
 		filter: blur(0);
+	}
+}
+
+.pt-70 {
+	padding-top: 70px;
+
+	@media (max-width: 1199.98px) {
+		padding-top: 50px;
+	}
+
+	@media (max-width: 768px) {
+		padding-top: 30px;
+	}
+}
+
+.pb-70 {
+	padding-bottom: 70px;
+
+	@media (max-width: 1199.98px) {
+		padding-bottom: 50px;
+	}
+
+	@media (max-width: 768px) {
+		padding-bottom: 30px;
+	}
+}
+
+.pd-70 {
+	padding-top   : 70px;
+	padding-bottom: 70px;
+
+	@media (max-width: 1199.98px) {
+		padding-top   : 50px;
+		padding-bottom: 50px;
+	}
+
+	@media (max-width: 768px) {
+		padding-top   : 30px;
+		padding-bottom: 30px;
+	}
+}
+
+// Forms
+.form-control {
+	padding: 7px 15px;
+	resize : none;
+
+	&.bd-input {
+		border: 1px solid #707070;
+	}
+
+	&.bdr-input {
+		border-radius: 10px;
+	}
+
+	&.line-height-45 {
+		line-height: 45px;
 	}
 }
