change namp map.js to GoogleMapController.js

--- a/src/index.pug
+++ b/src/index.pug
@@ -1,7 +1,7 @@
 extends _templates/_layout/_layout.pug
 
 block var
-	- let title = 'Woo Media';
+	- let title = 'Page | Index';
 	- let bodyClass = 'index-page';
 
 block banner,breadcrumb
