--- a/src/map.pug
+++ b/src/map.pug
@@ -1,8 +1,8 @@
 extends _templates/_layout/_layout.pug
 
 block var
-	- let title = 'Map';
-	- let bodyClass = 'map-page';
+	- let title = 'Page | Google map';
+	- let bodyClass = 'google-map-page';
 
 block banner,breadcrumb
 block main
