update tracking file change

--- a/src/index.pug
+++ b/src/index.pug
@@ -4,6 +4,9 @@ block var
 	- let title = 'Page | Index';
 	- let bodyClass = 'index-page';
 
+block loading
+	include _templates/_layout/_loading
 block banner,breadcrumb
 block main
+	include _templates/index/i-1
 block scripts
