--- a/src/map.pug
+++ b/src/map.pug
@@ -6,29 +6,37 @@ block var
 
 block banner,breadcrumb
 block main
-	.map-wrapper
-		.row.no-gutters
-			.col-lg-3
-				.dealer-locator-list
-					.list
-			.col-lg-9
-				#map
+	include _templates/map/m-1
 block scripts
 	script.
 		var locationsInput = [
 			{
-				lat: 10.1251,
-				lng: 11.125,
+				lat: 10.8511063,
+				lng: 106.6867113,
 				title: 'Home',
 				address: '134/8A, Trần Bá Giao, Q.Gò Vấp, Tp. HCM',
 				phone: '0914.633.990'
 			},
 			{
-				lat: 10.1251,
-				lng: 10.120,
+				lat: 12.1275322,
+				lng: 104.1095803,
 				title: 'Company',
 				address: '192/68, Nguyễn Oanh, Q.Gò Vấp, TP.HCM',
 				phone: '0905.010.115'
-			}
+			},
+			{
+				lat: 57.4483839,
+				lng: -99.8296627,
+				title: 'Company',
+				address: '192/68, Nguyễn Oanh, Q.Gò Vấp, TP.HCM',
+				phone: '0905.010.115'
+			},
+			{
+				lat: 10.8511010,
+				lng: 106.6867194,
+				title: 'Company',
+				address: '192/68, Nguyễn Oanh, Q.Gò Vấp, TP.HCM',
+				phone: '0905.010.115'
+			},
 		]
-	script(type="text/javascript", src="./js/map.min.js")
+	script(src="./js/GoogleMapController.min.js")
