--- a/src/scss/_globals/utilities.scss
+++ b/src/scss/_globals/utilities.scss
@@ -1,23 +1,76 @@
+body {
+	overflow-x: hidden;
+
+	&.disabled {
+		overflow: hidden;
+	}
+}
+
+input,
+select,
+textarea {
+	&.input-validation-error {
+		color     : red !important;
+		border    : 1px solid red !important;
+		transition: .3s all ease-in-out;
+
+		&::placeholder {
+			color: red !important;
+		}
+	}
+}
+
+.field-validation-error {
+	display  : inline-block;
+	margin   : .5rem 0;
+	font-size: 12px;
+	color    : red;
+}
+
+.tab-container {
+	.list-tab {
+		.item {
+			cursor: pointer;
+
+			&.active {
+				color: map-get($mau, main);
+			}
+		}
+	}
+
+	.tab-content {
+		.content {
+			display   : none;
+			opacity   : 0;
+			transition: all .3s cubic-bezier(.2, .5, .5, .8);
+
+			&.show {
+				opacity: 1;
+			}
+		}
+	}
+}
+
 .ofcv {
-	width: 100%;
-	height: 100%;
-	object-fit: cover;
+	width          : 100%;
+	height         : 100%;
+	object-fit     : cover;
 	object-position: center;
-	font-family: 'object-fit: cover, object-position: center';
+	font-family    : 'object-fit: cover, object-position: center';
 	background-size: cover;
 }
 
 .ofct {
-	width: 100%;
-	height: 100%;
-	object-fit: contain;
+	width          : 100%;
+	height         : 100%;
+	object-fit     : contain;
 	object-position: center;
-	font-family: 'object-fit: contain, object-position: center';
+	font-family    : 'object-fit: contain, object-position: center';
 	background-size: contain;
 }
 
 .blur-up {
-	filter: blur(10px);
+	filter    : blur(10px);
 	transition: filter 1s;
 
 	&.lazy-loaded {
@@ -29,14 +82,14 @@
 	&:after {
 		content: '';
 		display: table;
-		clear: both;
+		clear  : both;
 	}
 }
 
 .lcl {
-	overflow: hidden;
-	display: -webkit-box;
-	text-overflow: ellipsis;
+	overflow          : hidden;
+	display           : -webkit-box;
+	text-overflow     : ellipsis;
 	-webkit-box-orient: vertical;
 
 	&-1 {
