--- a/src/_templates/index/home.pug
+++ b/src/_templates/index/home.pug
@@ -158,10 +158,13 @@ section.news_home
           div
             img(src="../../assets/img/news/7.jpg", alt="")
             p.lcl.lcl-1 Lorem Ipsum is simply
+            span 20/02/2020
           div
             img(src="../../assets/img/news/7.jpg", alt="")
             p.lcl.lcl-1 Lorem Ipsum is simply
+            span 20/02/2020
 div.clear
+
 
         
 
