--- a/src/_templates/_layout/_header.pug
+++ b/src/_templates/_layout/_header.pug
@@ -14,7 +14,8 @@ header
             img(src='../../assets/img/Exclusion 3.png' alt='')
         .input-icons
           input.input-field(type='text')
-          i.fas.fa-search.icon  
+          button
+            img(src="../assets/img/icon/find_icon.svg", alt="") 
         .cart
           i.fas.fa-shopping-cart
           |  Gi&#x1ECF; H&agrave;ng | 0
