--- a/src/_templates/product/_product.pug
+++ b/src/_templates/product/_product.pug
@@ -1,4 +1,6 @@
+
 section.product_page.container
+    div#slider
     .inner_product.content
         h6.asd
             !="<a href='index.html'>Trang Chủ</a><span> > </span> <a class='active' href='product_detail.html'>Sản Phẩm</a>"
@@ -9,39 +11,45 @@ section.product_page.container
                         i.fas.fa-filter  BỘ LỌC
                 .card_body
                     h6 MỨC GIÁ
-                    .slider
-                        form
-                            div(data-role='rangeslider')
-                            label(for='range-1a') Từ:
-                            input#range-1a(type='range', name='range-1a', min='0', max='100', value='40')
-                            br
-                            label(for='range-1b') Đến:
-                            input#range-1b(type='range', name='range-1b', min='0', max='100', value='80')
+                    #slider-range
+                    p
+                        input#amount(type='text', readonly='', style='border:0; color:#f6931f; font-weight:bold;')
                     hr
                     h6 THƯƠNG HIỆU  
-                    i.fas.fa-search.icon
+                    button
+                        i.fas.fa-search.icon
                     input(type="text")
                     div.brand
                         ul
-                            li Addidas
-                            li Addidas
-                            li.active Addidas
-                            li Addidas
-                            li Addidas
-                            li Addidas
+                            li 
+                                a(href="") Addidas
+                            li 
+                                a(href="") Addidas
+                            li
+                                a(href="") Addidas
+                            li 
+                                a(href="") Addidas
+                            li 
+                                a(href="") Addidas
+                            li 
+                                a.active(href="") Addidas
             .card 
                 .card_header
                     div
                         != "<i class='fas fa-list'></i>  DANH MỤC SẢN PHẨM"
                 .card_body
                     ul.list
-                        li PHỤ KIỆN THỂ THAO
+                        li 
+                            a(href="") PHỤ KIỆN THỂ THAO
                         hr
-                        li PHỤ KIỆN THỂ THAO
+                        li 
+                            a(href="") PHỤ KIỆN THỂ THAO
                         hr
-                        li PHỤ KIỆN THỂ THAO
+                        li 
+                            a(href="") PHỤ KIỆN THỂ THAO
                         hr
-                        li PHỤ KIỆN THỂ THAO
+                        li 
+                            a(href="") PHỤ KIỆN THỂ THAO
                         hr
         .right_product
             h6 < 1 2 3 ... 8 9 10 >
