--- a/src/scss/_layouts/header.scss
+++ b/src/scss/_layouts/header.scss
@@ -60,11 +60,12 @@
 					border-radius: 50px;
 					border: none;
 				}
-				.icon {
-					position: absolute;
-					padding: 5px 60px 5px 0;
+				button {
+					background: none;
+					border: none;
 					color: #fff;
-					right: 210px;
+					position: absolute;
+					right: 270px;
 				}
 			}
 			.cart {
