--- a/src/scss/pages/index/home.scss
+++ b/src/scss/pages/index/home.scss
@@ -144,7 +144,7 @@
 					-webkit-box-align: center;
 					-ms-flex-align: center;
 					-webkit-align-items: center;
-					align-items: center;
+					align-items: left;
 					
 				}
 			}
@@ -225,4 +225,7 @@
 		clear: both;
 		margin-bottom: 50px;
 	}
+}
+.customer .inner_customer .swiper-container_brand .swiper-wrapper .swiper-slide {
+	text-align: left;
 }
