--- a/src/_templates/Introduce/_introduce.pug
+++ b/src/_templates/Introduce/_introduce.pug
@@ -1,5 +1,5 @@
 section.introduce.container
-    .inner_introduce.content
+    .inner_introduce
         h6 Giới Thiệu về Kim Cúc
         hr
         .welcome
