--- a/src/_templates/_layout/_footer.pug
+++ b/src/_templates/_layout/_footer.pug
@@ -1,5 +1,5 @@
 footer
-    .inner_footer.content
+    .inner_footer.container
         ul.as-fe
             li
                 h4 Liên Hệ
@@ -26,7 +26,7 @@ footer
         ul.as-fe
             img(src="../../assets/img/Group 13207.png", alt="")
     .last_page
-        ul.content
+        ul
             li Điều Kiện
             li Điều Khoản
             li Chính Sách Bảo Mật
