--- a/src/_templates/_layout/_header.pug
+++ b/src/_templates/_layout/_header.pug
@@ -23,16 +23,16 @@ header
       nav.menu
         ul.inner-menu
           li
-            a(href='introduce.html') Gi&#x1EDB;i thi&#x1EC7;u
+            a(href='introduce.html') Giới Thiệu
           li
             a(href='product.html') Sản Phẩm
           li
-            a(href='news_event.html') Tin T&#x1EE9;c - S&#x1EF1; Ki&#x1EC7;n
+            a(href='news_event.html') Tin Tức - Sự Kiện
           li
-            a(href='guarantee.html') Ch&iacute;nh S&aacute;ch
+            a(href='guarantee.html') Chính Sách
           li
-            a(href='contact.html') Li&ecirc;n H&#x1EC7;
-          li
+            a(href='contact.html') Liên Hệ
+          li.language
             a(href="")
               img(src='../../assets/img/vn.png' alt='')
             a(href="")
