--- a/src/_templates/contact/_contact.pug
+++ b/src/_templates/contact/_contact.pug
@@ -1,5 +1,5 @@
 section.contact_section.container
-    .inner_contact.content
+    .inner_contact
         h6 THÔNG TIN LIÊN HỆ
         hr
         .info_contact
