--- a/src/_templates/event_detail/_event_detail.pug
+++ b/src/_templates/event_detail/_event_detail.pug
@@ -1,5 +1,5 @@
 section.event_detail.container
-    .inner_event_detail.content
+    .inner_event_detail
         h6 Tin tức - Sự Kiện
         hr
         .relate_news_left
@@ -9,17 +9,27 @@ section.event_detail.container
                         i.fas.fa-list  Tin nổi bật
                 .card_body
                     ul.list
-                        li Lorem Ipsum
-                        li Lorem Ipsum                        
-                        li Lorem Ipsum                        
-                        li PHỤ KIỆN THỂ THAO
-                        li Lorem Ipsum      
-                        li Lorem Ipsum      
-                        li Lorem Ipsum      
-                        li Lorem Ipsum      
-                        li Lorem Ipsum      
-                        li Lorem Ipsum      
-                        li Lorem Ipsum
+                        li 
+                            a(href="event_detail.html") Lorem Ipsum
+                        li 
+                            a(href="event_detail.html") Lorem Ipsum
+                        li 
+                            a(href="event_detail.html") Lorem Ipsum
+                        li 
+                            a(href="event_detail.html") Lorem Ipsum
+                        li 
+                            a(href="event_detail.html") Lorem Ipsum
+                        li 
+                            a(href="event_detail.html") Lorem Ipsum
+                        li 
+                            a(href="event_detail.html") Lorem Ipsum
+                        li 
+                            a(href="event_detail.html") Lorem Ipsum
+                        li 
+                            a(href="event_detail.html") Lorem Ipsum
+                        li 
+                            a(href="event_detail.html") Lorem Ipsum
+                        
         .event_detail_right
             strong Lorem Ipsum is simply dummy text of the printing and typesetting.
             div
