--- a/src/_templates/guarantee/_guarantee.pug
+++ b/src/_templates/guarantee/_guarantee.pug
@@ -1,17 +1,24 @@
 section.guarantee.container
-    .inner_guarantee.content
+    .inner_guarantee
         h6 Chính Sách
         hr
         .guarantee_left
             .card 
                 .card_body
                     ul.list
-                        li Lorem Ipsum
-                        li Lorem Ipsum                        
-                        li Lorem Ipsum                        
-                        li PHỤ KIỆN THỂ THAO
-                        li Lorem Ipsum      
-                        li Lorem Ipsum      
+                        li 
+                            a(href="") Lorem Ipsum
+                        li 
+                            a(href="") Lorem Ipsum
+                        li 
+                            a(href="") Lorem Ipsum
+                        li 
+                            a(href="") Lorem Ipsum
+                        li 
+                            a(href="") Lorem Ipsum
+                        li 
+                            a(href="") Lorem Ipsum
+                            
                         
         .guarantee_right
             strong Chính sách bảo hành:
