--- a/src/_templates/index/home.pug
+++ b/src/_templates/index/home.pug
@@ -1,5 +1,5 @@
 section.label-wrapper.container
-  .inner-label.content
+  .inner-label
     h6 NH&Agrave; PH&Acirc;N PH&#x1ED0;I CH&Iacute;NH H&Atilde;NG C&Aacute;C TH&#x1AF;&#x1A0;NG HI&#x1EC6;U
     .swiper-container_brand.swiper-container
       .swiper-wrapper
@@ -17,7 +17,7 @@ section.label-wrapper.container
           img(src='../../assets/img/label/yonex-min.png' alt='')
       .swiper-pagination
 section.product.container
-  .inner_product_sell.content
+  .inner_product_sell
     h6 Sản Phẩm Bán
     hr
     .product_content
@@ -113,8 +113,8 @@ section.product.container
   div
     p Fitness &
     span workout program
-section.customer
-  .inner_customer.content
+section.customer.container
+  .inner_customer
     h6 KHÁCH HÀNG CỦA CHÚNG TÔI
     hr
     .swiper-container_brand.swiper-container
@@ -135,8 +135,8 @@ section.customer
           img(src="../../assets/img/customer/228.jpg", alt="")
           span.lcl.lcl-1 Lorem Ipsum
       .swiper-pagination
-section.news_home
-  .inner_news.content
+section.news_home.container
+  .inner_news
     .right_news
       .inner_right_news
         h6 Tin Tiêu Điểm
