--- a/src/_templates/news_event/_news_event.pug
+++ b/src/_templates/news_event/_news_event.pug
@@ -1,5 +1,5 @@
 section.news_event.container
-    .inner_news_event.content
+    .inner_news_event
         h6 Tin Tức - Sự Kiện
         hr
         .hot_news
@@ -9,18 +9,24 @@ section.news_event.container
                         i.fas.fa-list  Tin nổi bật
                 .card_body
                     ul.list
-                        li Lorem Ipsum
-                        li Lorem Ipsum                        
-                        li Lorem Ipsum                        
                         li 
-                            a.active(href="event_detail.html") lorem Ipsum
-                        li Lorem Ipsum      
-                        li Lorem Ipsum      
-                        li Lorem Ipsum      
-                        li Lorem Ipsum      
-                        li Lorem Ipsum      
-                        li Lorem Ipsum      
-                        li Lorem Ipsum      
+                            a.active(href="event_detail.html") Lorem Ipsum
+                        li 
+                            a(href="event_detail.html") Lorem Ipsum
+                        li 
+                            a(href="event_detail.html") Lorem Ipsum
+                        li 
+                            a(href="event_detail.html") Lorem Ipsum
+                        li 
+                            a(href="event_detail.html") Lorem Ipsum
+                        li 
+                            a(href="event_detail.html") Lorem Ipsum
+                        li 
+                            a(href="event_detail.html") Lorem Ipsum
+                        li 
+                            a(href="event_detail.html") Lorem Ipsum
+                        li 
+                            a(href="event_detail.html") Lorem Ipsum    
         .news_feed
             .news_feed_left
                 img(src="../../assets/img/news_event/workout-at-gym.jpg", alt="")
