--- a/src/_templates/product_detail/_product_detail.pug
+++ b/src/_templates/product_detail/_product_detail.pug
@@ -1,5 +1,5 @@
 section.product_detail.container
-    .inner_product_detail.content
+    .inner_product_detail
         h6
             !="<a href='index.html'>Trang Chủ</a><span> > </span><a href='index.html'>Trang Chủ</a><span> > </span> <a href='index.html'>Trang Chủ</a><span> > </span>  <a class='active' href='product_detail.html'>Giày Tesnis nam Ikecour</a>"
         .product_detail_left
