--- a/src/scss/_globals/grid.scss
+++ b/src/scss/_globals/grid.scss
@@ -1,9 +1,8 @@
 .container {
-	width: 100%;
+	width: calc(100% - 240px);
 	padding-right: 10px;
 	padding-left: 10px;
-	margin-right: auto;
-	margin-left: auto;
+	margin: 50px auto;
 	position: relative;
 }
 
